# allup

./: CHANGELOG.md  Cargo.toml  README.md  example.toml  justfile  mise.toml  release.toml
.github/: dependabot.yml
.github/workflows/: check.yml
src/: cli.rs  config.rs  main.rs  model.rs  probe.rs  render.rs  tui.rs
