[package]
name = "allup"
version = "0.1.1"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.76"
repository = "https://github.com/jcornaz/allup"
description = "A CLI to check that all (configured) services are currently up"
categories = ["command-line-interface"]
keywords = ["cli", "status", "check"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive", "env"] }
colored = "2.1"
main_error = "0.1.2"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
toml = { version = "0.8.12", default-features = false, features = ["parse"] }
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]

