[package]
name = "allup"
version = "0.1.3"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.76"
repository = "https://github.com/jcornaz/allup"
description = "A CLI to check that all (configured) services are currently up"
categories = ["command-line-interface"]
keywords = ["cli", "status", "check"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
main_error = "0.1.2"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time"] }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]

