[package]
name = "allup"
version = "1.0.7"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/jcornaz/allup"
description = "A CLI to check that all (configured) services are currently up"
categories = ["command-line-interface"]
keywords = ["cli", "status", "check"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
colored = "3"
main_error = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
url = { version = "2", features = ["serde"] }

[dev-dependencies]

